parser/fg/parser/fg_parser.go
// Generated from parser/FG.g4 by ANTLR 4.7.

package parser // FG

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "';'", "'('", "')'", "'{'", "'_'", "'='", "'.'", "'\"%#v\"'", "','",
	"'}'", "':'", "'chan'", "'<-'", "':='", "'func'", "'interface'", "'main'",
	"'package'", "'return'", "'struct'", "'type'", "'import'", "'fmt'", "'Printf'",
	"'Sprintf'", "'close'", "'go'", "'make'", "'select'", "'default'", "'case'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "FUNC", "INTERFACE",
	"MAIN", "PACKAGE", "RETURN", "STRUCT", "TYPE", "IMPORT", "FMT", "PRINTF",
	"SPRINTF", "CLOSE", "GORTN", "MAKE", "SELECT", "DEFAULT", "CASE", "NAME",
	"WHITESPACE", "COMMENT", "LINE_COMMENT", "STRING",
}

var ruleNames = []string{
	"program", "decls", "typeDecl", "methBody", "methDecl", "typeLit", "channelTypeLit",
	"type_", "fieldDecls", "fieldDecl", "specs", "spec", "sig", "params", "paramDecl",
	"methCall_", "stmt", "caseGuard", "expr", "exprs",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type FGParser struct {
	*antlr.BaseParser
}

func NewFGParser(input antlr.TokenStream) *FGParser {
	this := new(FGParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "FG.g4"

	return this
}

// FGParser tokens.
const (
	FGParserEOF          = antlr.TokenEOF
	FGParserT__0         = 1
	FGParserT__1         = 2
	FGParserT__2         = 3
	FGParserT__3         = 4
	FGParserT__4         = 5
	FGParserT__5         = 6
	FGParserT__6         = 7
	FGParserT__7         = 8
	FGParserT__8         = 9
	FGParserT__9         = 10
	FGParserT__10        = 11
	FGParserT__11        = 12
	FGParserT__12        = 13
	FGParserT__13        = 14
	FGParserFUNC         = 15
	FGParserINTERFACE    = 16
	FGParserMAIN         = 17
	FGParserPACKAGE      = 18
	FGParserRETURN       = 19
	FGParserSTRUCT       = 20
	FGParserTYPE         = 21
	FGParserIMPORT       = 22
	FGParserFMT          = 23
	FGParserPRINTF       = 24
	FGParserSPRINTF      = 25
	FGParserCLOSE        = 26
	FGParserGORTN        = 27
	FGParserMAKE         = 28
	FGParserSELECT       = 29
	FGParserDEFAULT      = 30
	FGParserCASE         = 31
	FGParserNAME         = 32
	FGParserWHITESPACE   = 33
	FGParserCOMMENT      = 34
	FGParserLINE_COMMENT = 35
	FGParserSTRING       = 36
)

// FGParser rules.
const (
	FGParserRULE_program        = 0
	FGParserRULE_decls          = 1
	FGParserRULE_typeDecl       = 2
	FGParserRULE_methBody       = 3
	FGParserRULE_methDecl       = 4
	FGParserRULE_typeLit        = 5
	FGParserRULE_channelTypeLit = 6
	FGParserRULE_type_          = 7
	FGParserRULE_fieldDecls     = 8
	FGParserRULE_fieldDecl      = 9
	FGParserRULE_specs          = 10
	FGParserRULE_spec           = 11
	FGParserRULE_sig            = 12
	FGParserRULE_params         = 13
	FGParserRULE_paramDecl      = 14
	FGParserRULE_methCall_      = 15
	FGParserRULE_stmt           = 16
	FGParserRULE_caseGuard      = 17
	FGParserRULE_expr           = 18
	FGParserRULE_exprs          = 19
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FGParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FGParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) PACKAGE() antlr.TerminalNode {
	return s.GetToken(FGParserPACKAGE, 0)
}

func (s *ProgramContext) AllMAIN() []antlr.TerminalNode {
	return s.GetTokens(FGParserMAIN)
}

func (s *ProgramContext) MAIN(i int) antlr.TerminalNode {
	return s.GetToken(FGParserMAIN, i)
}

func (s *ProgramContext) FUNC() antlr.TerminalNode {
	return s.GetToken(FGParserFUNC, 0)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(FGParserEOF, 0)
}

func (s *ProgramContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ProgramContext) FMT() antlr.TerminalNode {
	return s.GetToken(FGParserFMT, 0)
}

func (s *ProgramContext) PRINTF() antlr.TerminalNode {
	return s.GetToken(FGParserPRINTF, 0)
}

func (s *ProgramContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(FGParserIMPORT, 0)
}

func (s *ProgramContext) STRING() antlr.TerminalNode {
	return s.GetToken(FGParserSTRING, 0)
}

func (s *ProgramContext) Decls() IDeclsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclsContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *FGParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FGParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Match(FGParserPACKAGE)
	}
	{
		p.SetState(41)
		p.Match(FGParserMAIN)
	}
	{
		p.SetState(42)
		p.Match(FGParserT__0)
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == FGParserIMPORT {
		{
			p.SetState(43)
			p.Match(FGParserIMPORT)
		}
		{
			p.SetState(44)
			p.Match(FGParserSTRING)
		}
		{
			p.SetState(45)
			p.Match(FGParserT__0)
		}

	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(48)
			p.Decls()
		}

	}
	{
		p.SetState(51)
		p.Match(FGParserFUNC)
	}
	{
		p.SetState(52)
		p.Match(FGParserMAIN)
	}
	{
		p.SetState(53)
		p.Match(FGParserT__1)
	}
	{
		p.SetState(54)
		p.Match(FGParserT__2)
	}
	{
		p.SetState(55)
		p.Match(FGParserT__3)
	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case FGParserT__4:
		{
			p.SetState(56)
			p.Match(FGParserT__4)
		}
		{
			p.SetState(57)
			p.Match(FGParserT__5)
		}
		{
			p.SetState(58)
			p.expr(0)
		}

	case FGParserFMT:
		{
			p.SetState(59)
			p.Match(FGParserFMT)
		}
		{
			p.SetState(60)
			p.Match(FGParserT__6)
		}
		{
			p.SetState(61)
			p.Match(FGParserPRINTF)
		}
		{
			p.SetState(62)
			p.Match(FGParserT__1)
		}
		{
			p.SetState(63)
			p.Match(FGParserT__7)
		}
		{
			p.SetState(64)
			p.Match(FGParserT__8)
		}
		{
			p.SetState(65)
			p.expr(0)
		}
		{
			p.SetState(66)
			p.Match(FGParserT__2)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	{
		p.SetState(70)
		p.Match(FGParserT__9)
	}
	{
		p.SetState(71)
		p.Match(FGParserEOF)
	}

	return localctx
}

// IDeclsContext is an interface to support dynamic dispatch.
type IDeclsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclsContext differentiates from other interfaces.
	IsDeclsContext()
}

type DeclsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclsContext() *DeclsContext {
	var p = new(DeclsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FGParserRULE_decls
	return p
}

func (*DeclsContext) IsDeclsContext() {}

func NewDeclsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclsContext {
	var p = new(DeclsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FGParserRULE_decls

	return p
}

func (s *DeclsContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclsContext) AllTypeDecl() []ITypeDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITypeDeclContext)(nil)).Elem())
	var tst = make([]ITypeDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITypeDeclContext)
		}
	}

	return tst
}

func (s *DeclsContext) TypeDecl(i int) ITypeDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITypeDeclContext)
}

func (s *DeclsContext) AllMethDecl() []IMethDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMethDeclContext)(nil)).Elem())
	var tst = make([]IMethDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMethDeclContext)
		}
	}

	return tst
}

func (s *DeclsContext) MethDecl(i int) IMethDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMethDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMethDeclContext)
}

func (s *DeclsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.EnterDecls(s)
	}
}

func (s *DeclsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.ExitDecls(s)
	}
}

func (p *FGParser) Decls() (localctx IDeclsContext) {
	localctx = NewDeclsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FGParserRULE_decls)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(79)
	p.GetErrorHandler().Sync(p)
	_alt = 1
	for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1:
			p.SetState(75)
			p.GetErrorHandler().Sync(p)

			switch p.GetTokenStream().LA(1) {
			case FGParserTYPE:
				{
					p.SetState(73)
					p.TypeDecl()
				}

			case FGParserFUNC:
				{
					p.SetState(74)
					p.MethDecl()
				}

			default:
				panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			}
			{
				p.SetState(77)
				p.Match(FGParserT__0)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(81)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
	}

	return localctx
}

// ITypeDeclContext is an interface to support dynamic dispatch.
type ITypeDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTypeDeclContext differentiates from other interfaces.
	IsTypeDeclContext()
}

type TypeDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeDeclContext() *TypeDeclContext {
	var p = new(TypeDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FGParserRULE_typeDecl
	return p
}

func (*TypeDeclContext) IsTypeDeclContext() {}

func NewTypeDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeDeclContext {
	var p = new(TypeDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FGParserRULE_typeDecl

	return p
}

func (s *TypeDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeDeclContext) TYPE() antlr.TerminalNode {
	return s.GetToken(FGParserTYPE, 0)
}

func (s *TypeDeclContext) NAME() antlr.TerminalNode {
	return s.GetToken(FGParserNAME, 0)
}

func (s *TypeDeclContext) TypeLit() ITypeLitContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeLitContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeLitContext)
}

func (s *TypeDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.EnterTypeDecl(s)
	}
}

func (s *TypeDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.ExitTypeDecl(s)
	}
}

func (p *FGParser) TypeDecl() (localctx ITypeDeclContext) {
	localctx = NewTypeDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, FGParserRULE_typeDecl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(83)
		p.Match(FGParserTYPE)
	}
	{
		p.SetState(84)
		p.Match(FGParserNAME)
	}
	{
		p.SetState(85)
		p.TypeLit()
	}

	return localctx
}

// IMethBodyContext is an interface to support dynamic dispatch.
type IMethBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMethBodyContext differentiates from other interfaces.
	IsMethBodyContext()
}

type MethBodyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMethBodyContext() *MethBodyContext {
	var p = new(MethBodyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FGParserRULE_methBody
	return p
}

func (*MethBodyContext) IsMethBodyContext() {}

func NewMethBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MethBodyContext {
	var p = new(MethBodyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FGParserRULE_methBody

	return p
}

func (s *MethBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *MethBodyContext) CopyFrom(ctx *MethBodyContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *MethBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MethBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type MethReturnContext struct {
	*MethBodyContext
}

func NewMethReturnContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MethReturnContext {
	var p = new(MethReturnContext)

	p.MethBodyContext = NewEmptyMethBodyContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MethBodyContext))

	return p
}

func (s *MethReturnContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MethReturnContext) RETURN() antlr.TerminalNode {
	return s.GetToken(FGParserRETURN, 0)
}

func (s *MethReturnContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *MethReturnContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.EnterMethReturn(s)
	}
}

func (s *MethReturnContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.ExitMethReturn(s)
	}
}

type SprintfContext struct {
	*MethBodyContext
}

func NewSprintfContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SprintfContext {
	var p = new(SprintfContext)

	p.MethBodyContext = NewEmptyMethBodyContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MethBodyContext))

	return p
}

func (s *SprintfContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SprintfContext) FMT() antlr.TerminalNode {
	return s.GetToken(FGParserFMT, 0)
}

func (s *SprintfContext) SPRINTF() antlr.TerminalNode {
	return s.GetToken(FGParserSPRINTF, 0)
}

func (s *SprintfContext) STRING() antlr.TerminalNode {
	return s.GetToken(FGParserSTRING, 0)
}

func (s *SprintfContext) AllExpr() []IExprContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExprContext)(nil)).Elem())
	var tst = make([]IExprContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExprContext)
		}
	}

	return tst
}

func (s *SprintfContext) Expr(i int) IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *SprintfContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.EnterSprintf(s)
	}
}

func (s *SprintfContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.ExitSprintf(s)
	}
}

type SequenceContext struct {
	*MethBodyContext
}

func NewSequenceContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SequenceContext {
	var p = new(SequenceContext)

	p.MethBodyContext = NewEmptyMethBodyContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MethBodyContext))

	return p
}

func (s *SequenceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SequenceContext) Stmt() IStmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *SequenceContext) MethBody() IMethBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMethBodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMethBodyContext)
}

func (s *SequenceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.EnterSequence(s)
	}
}

func (s *SequenceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.ExitSequence(s)
	}
}

type CaseSelectContext struct {
	*MethBodyContext
}

func NewCaseSelectContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *CaseSelectContext {
	var p = new(CaseSelectContext)

	p.MethBodyContext = NewEmptyMethBodyContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MethBodyContext))

	return p
}

func (s *CaseSelectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CaseSelectContext) SELECT() antlr.TerminalNode {
	return s.GetToken(FGParserSELECT, 0)
}

func (s *CaseSelectContext) AllCASE() []antlr.TerminalNode {
	return s.GetTokens(FGParserCASE)
}

func (s *CaseSelectContext) CASE(i int) antlr.TerminalNode {
	return s.GetToken(FGParserCASE, i)
}

func (s *CaseSelectContext) AllCaseGuard() []ICaseGuardContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICaseGuardContext)(nil)).Elem())
	var tst = make([]ICaseGuardContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICaseGuardContext)
		}
	}

	return tst
}

func (s *CaseSelectContext) CaseGuard(i int) ICaseGuardContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICaseGuardContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICaseGuardContext)
}

func (s *CaseSelectContext) AllMethBody() []IMethBodyContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMethBodyContext)(nil)).Elem())
	var tst = make([]IMethBodyContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMethBodyContext)
		}
	}

	return tst
}

func (s *CaseSelectContext) MethBody(i int) IMethBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMethBodyContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMethBodyContext)
}

func (s *CaseSelectContext) DEFAULT() antlr.TerminalNode {
	return s.GetToken(FGParserDEFAULT, 0)
}

func (s *CaseSelectContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.EnterCaseSelect(s)
	}
}

func (s *CaseSelectContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FGListener); ok {
		listenerT.ExitCaseSelect(s)
	}
}

func (p *FGParser) MethBody() (localctx IMethBodyContext) {
	localctx = NewMethBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, FGParserRULE_methBody)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(124)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case FGParserRETURN:
		localctx = NewMethReturnContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(87)
			p.Match(FGParserRETURN)
		}
		{
			p.SetState(88)
			p.expr(0)
		}

	case FGParserT__12, FGParserCLOSE, FGParserGORTN, FGParserMAKE, FGParserNAME:
		localctx = NewSequenceContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(89)
			p.Stmt()
		}
		{
			p.SetState(90)
			p.Match(FGParserT__0)
		}
		{
			p.SetState(91)
			p.MethBody()
		}

	case FGParserFMT:
		localctx = NewSprintfContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(93)
			p.Match(FGParserFMT)
		}
		{
			p.SetState(94)
			p.Match(FGParserT__6)
		}
		{
			p.SetState(95)
			p.Match(FGParserSPRINTF)
		}
		{
			p.SetState(96)
			p.Match(FGParserT__1)
		}
		p.SetState(97)
		_la = p.GetTokenStream().LA(1)

		if !(_la == FGParserT__7 || _la == FGParserSTRING) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
		p.SetState(102)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ((_la-9)&-(0x1f+1)) == 0 && ((1<<uint((_la-9)))&((1<<(FGParserT__8-9))|(1<<(FGParserT__12-9))|(1<<(FGParserMAKE-9))|(1<<(FGParserNAME-9)))) != 0 {
			p.SetState(100)
			p.GetErrorHandler().Sync(p)

			switch p.GetTokenStream().LA(1) {
			case FGParserT__8:
				{
					p.SetState(98)
					p.Match(FGParserT__8)
				}

			case FGParserT__12, FGParserMAKE, FGParserNAME:
				{
					p.SetState(99)
					p.expr(0)
				}

			default:
				panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			}

			p.SetState(104)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(105)
			p.Match(FGParserT__2)
		}

	case FGParserSELECT:
		localctx = NewCaseSelectContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(106)
			p.Match(FGParserSELECT)
		}
		{
			p.SetState(107)
			p.Match(FGParserT__3)
		}
		p.SetState(115)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
